// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DaemonClient tests should process data when received 1`] = `
Array [
  "feed",
  "dog",
]
`;

exports[`DaemonClient tests should process data when received 2`] = `
Object {
  "daemonResponse": Object {
    "argv": Array [
      "feed",
      "dog",
    ],
    "cwd": "fake",
    "env": Object {},
    "stdin": null,
    "stdinLength": 0,
  },
  "stream": Object {
    "on": [MockFunction] {
      "calls": Array [
        Array [
          "end",
          [Function],
        ],
        Array [
          "close",
          [Function],
        ],
        Array [
          "data",
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
  },
}
`;

exports[`DaemonClient tests should process response with binary stdin data when received 1`] = `
Array [
  "feed",
  "cat",
]
`;

exports[`DaemonClient tests should process response with binary stdin data when received 2`] = `
Object {
  "daemonResponse": Object {
    "argv": Array [
      "feed",
      "cat",
    ],
    "cwd": "fake",
    "env": Object {},
    "stdin": null,
    "stdinLength": 11,
  },
  "stream": Object {
    "on": [MockFunction] {
      "calls": Array [
        Array [
          "end",
          [Function],
        ],
        Array [
          "close",
          [Function],
        ],
        Array [
          "data",
          [Function],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
  },
}
`;

exports[`DaemonClient tests should shutdown when keyword is specified 1`] = `"Terminating server"`;
